# spec-driven-ai-coding-harness

./: .coverage  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
demo/: README.md
demo/implementation/: main.py  test_api.py
demo/requirements/: attachment_management.md
demo/specs/: acceptance_criteria.md  api_spec.yaml  domain_model.yaml
demo/tests/: test_api.py  test_attachment_api.py
demo/tests/pytest/: conftest.py  test_api.py  test_attachment_api.py  test_delete_attachment.py  test_delete_attachment_operation.py  test_delete_audit_log.py  test_demo.py  test_download_attachment.py  test_download_attachment_operation.py  test_download_audit_log.py  test_list_attachment.py  test_list_attachment_operation.py  test_list_audit_log.py  test_preview_attachment.py  test_preview_attachment_operation.py  test_preview_audit_log.py  test_print_attachment.py  test_print_attachment_operation.py  test_print_audit_log.py  test_record_attachment.py  test_record_attachment_operation.py  test_record_audit_log.py  test_upload_attachment.py  test_upload_attachment_operation.py  test_upload_audit_log.py
docs/: architecture.md  design_principles.md  prompt_templates.md  vibe_coding_workflow.md
docs/assets/: terminal-demo.md
examples/expected_outputs/: acceptance_criteria.md  ai_coding_tasks.md  api_spec.yaml  task_breakdown.yaml  test_cases.md  user_stories.md
examples/requirements/: crm_lead_management.md  customer_management.md  ecommerce_order_processing.md  order_approval_workflow.md  saas_subscription_billing.md  saas_subscription_management.md  saas_tenant_management.md  saas_tenant_subscription.md
outputs/: ai_coding_tasks.md  task_breakdown.yaml  test_cases.md  user_stories.md
scripts/: demo_script.py
src/spec_harness/: __init__.py  cli.py  config.py
src/spec_harness/analyzer/: domain_analyzer.py
src/spec_harness/generators/: acceptance_generator.py  (+5 more)
templates/: acceptance_criteria.md.j2  ai_coding_task.md.j2  api_spec.yaml.j2  task_breakdown.yaml.j2  test_case.md.j2  user_story.md.j2
tests/: test_acceptance_generator.py  test_api_spec_generator.py  test_cli.py  test_domain_analyzer.py  test_requirement_parser.py  test_task_breakdown.py  test_traceability_validator.py  test_user_story_generator.py
(+9 files in other folders)
