[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-driven-ai-coding-harness"
version = "1.0.0"
description = "A lightweight harness for turning product requirements into user stories, acceptance criteria, API specs, test cases, and implementation tasks for AI-assisted software delivery."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Harry Yu", email = "your.email@example.com"}
]
keywords = ["ai-coding", "spec-driven", "requirements", "test-generation", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
web = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.35.0",
]
all = [
    "spec-driven-ai-coding-harness[dev,web]"
]

[project.scripts]
spec-harness = "spec_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_harness"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=spec_harness --cov-report=term-missing:skip-covered"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
